deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: user-service
spec:
  replicas: 2

  selector:
    matchLabels:
      app: user-service

  template:
    metadata:
      labels:
        app: user-service

    spec:
      containers:
      - name: user-service

        image: 318630425608.dkr.ecr.ap-south-1.amazonaws.com/user-service:v1

        imagePullPolicy: Always

        ports:
        - containerPort: 5000

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"

        readinessProbe:
          httpGet:
            path: /users
            port: 5000

          initialDelaySeconds: 5
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /users
            port: 5000

          initialDelaySeconds: 10
          periodSeconds: 20
