service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: user-service

spec:
  selector:
    app: user-service

  ports:
  - port: 80
    targetPort: 5000

  type: ClusterIP
